Module1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEBODY
    CLOSEDATA
    CLOSEDIV
    CLOSEHEAD
    CLOSEHEADER
    CLOSEHREF
    CLOSEROW
    CLOSETABLE
    OPENBODY
    OPENDATA
    OPENDIV
    OPENHEAD
    OPENHEADER
    OPENHREF
    OPENROW
    OPENTABLE

Grammar

Rule 0     S' -> start
Rule 1     start -> active
Rule 2     start -> deaths
Rule 3     start -> newcases
Rule 4     start -> recover
Rule 5     skipcontent -> CONTENT skipcontent
Rule 6     skipcontent -> CONTENT
Rule 7     active -> ACTIVE skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
Rule 8     deaths -> DEATHS skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
Rule 9     newcases -> NEWCASES skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
Rule 10    recover -> RECOVERED skipcontent LINE CONTENT

Terminals, with rules where they appear

ACTIVE               : 7
CATEGOR              : 7 8 9
CLOSEBODY            : 
CLOSEDATA            : 
CLOSEDIV             : 
CLOSEHEAD            : 
CLOSEHEADER          : 
CLOSEHREF            : 
CLOSEROW             : 
CLOSETABLE           : 
CONTENT              : 5 6 7 7 8 8 9 9 10
DEATHS               : 8
LINE                 : 7 8 9 10
NEWCASES             : 9
OPENBODY             : 
OPENDATA             : 
OPENDIV              : 
OPENHEAD             : 
OPENHEADER           : 
OPENHREF             : 
OPENROW              : 
OPENTABLE            : 
RECOVERED            : 10
error                : 

Nonterminals, with rules where they appear

active               : 1
deaths               : 2
newcases             : 3
recover              : 4
skipcontent          : 5 7 7 8 8 9 9 10
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . active
    (2) start -> . deaths
    (3) start -> . newcases
    (4) start -> . recover
    (7) active -> . ACTIVE skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (8) deaths -> . DEATHS skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (9) newcases -> . NEWCASES skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (10) recover -> . RECOVERED skipcontent LINE CONTENT

    ACTIVE          shift and go to state 6
    DEATHS          shift and go to state 7
    NEWCASES        shift and go to state 8
    RECOVERED       shift and go to state 9

    start                          shift and go to state 1
    active                         shift and go to state 2
    deaths                         shift and go to state 3
    newcases                       shift and go to state 4
    recover                        shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> active .

    $end            reduce using rule 1 (start -> active .)


state 3

    (2) start -> deaths .

    $end            reduce using rule 2 (start -> deaths .)


state 4

    (3) start -> newcases .

    $end            reduce using rule 3 (start -> newcases .)


state 5

    (4) start -> recover .

    $end            reduce using rule 4 (start -> recover .)


state 6

    (7) active -> ACTIVE . skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 10

state 7

    (8) deaths -> DEATHS . skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 12

state 8

    (9) newcases -> NEWCASES . skipcontent CATEGOR CONTENT skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 13

state 9

    (10) recover -> RECOVERED . skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 14

state 10

    (7) active -> ACTIVE skipcontent . CATEGOR CONTENT skipcontent LINE CONTENT

    CATEGOR         shift and go to state 15


state 11

    (5) skipcontent -> CONTENT . skipcontent
    (6) skipcontent -> CONTENT .
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CATEGOR         reduce using rule 6 (skipcontent -> CONTENT .)
    LINE            reduce using rule 6 (skipcontent -> CONTENT .)
    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 16

state 12

    (8) deaths -> DEATHS skipcontent . CATEGOR CONTENT skipcontent LINE CONTENT

    CATEGOR         shift and go to state 17


state 13

    (9) newcases -> NEWCASES skipcontent . CATEGOR CONTENT skipcontent LINE CONTENT

    CATEGOR         shift and go to state 18


state 14

    (10) recover -> RECOVERED skipcontent . LINE CONTENT

    LINE            shift and go to state 19


state 15

    (7) active -> ACTIVE skipcontent CATEGOR . CONTENT skipcontent LINE CONTENT

    CONTENT         shift and go to state 20


state 16

    (5) skipcontent -> CONTENT skipcontent .

    CATEGOR         reduce using rule 5 (skipcontent -> CONTENT skipcontent .)
    LINE            reduce using rule 5 (skipcontent -> CONTENT skipcontent .)


state 17

    (8) deaths -> DEATHS skipcontent CATEGOR . CONTENT skipcontent LINE CONTENT

    CONTENT         shift and go to state 21


state 18

    (9) newcases -> NEWCASES skipcontent CATEGOR . CONTENT skipcontent LINE CONTENT

    CONTENT         shift and go to state 22


state 19

    (10) recover -> RECOVERED skipcontent LINE . CONTENT

    CONTENT         shift and go to state 23


state 20

    (7) active -> ACTIVE skipcontent CATEGOR CONTENT . skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 24

state 21

    (8) deaths -> DEATHS skipcontent CATEGOR CONTENT . skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 25

state 22

    (9) newcases -> NEWCASES skipcontent CATEGOR CONTENT . skipcontent LINE CONTENT
    (5) skipcontent -> . CONTENT skipcontent
    (6) skipcontent -> . CONTENT

    CONTENT         shift and go to state 11

    skipcontent                    shift and go to state 26

state 23

    (10) recover -> RECOVERED skipcontent LINE CONTENT .

    $end            reduce using rule 10 (recover -> RECOVERED skipcontent LINE CONTENT .)


state 24

    (7) active -> ACTIVE skipcontent CATEGOR CONTENT skipcontent . LINE CONTENT

    LINE            shift and go to state 27


state 25

    (8) deaths -> DEATHS skipcontent CATEGOR CONTENT skipcontent . LINE CONTENT

    LINE            shift and go to state 28


state 26

    (9) newcases -> NEWCASES skipcontent CATEGOR CONTENT skipcontent . LINE CONTENT

    LINE            shift and go to state 29


state 27

    (7) active -> ACTIVE skipcontent CATEGOR CONTENT skipcontent LINE . CONTENT

    CONTENT         shift and go to state 30


state 28

    (8) deaths -> DEATHS skipcontent CATEGOR CONTENT skipcontent LINE . CONTENT

    CONTENT         shift and go to state 31


state 29

    (9) newcases -> NEWCASES skipcontent CATEGOR CONTENT skipcontent LINE . CONTENT

    CONTENT         shift and go to state 32


state 30

    (7) active -> ACTIVE skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .

    $end            reduce using rule 7 (active -> ACTIVE skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .)


state 31

    (8) deaths -> DEATHS skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .

    $end            reduce using rule 8 (deaths -> DEATHS skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .)


state 32

    (9) newcases -> NEWCASES skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .

    $end            reduce using rule 9 (newcases -> NEWCASES skipcontent CATEGOR CONTENT skipcontent LINE CONTENT .)

